<resources>
    <string name="app_name">StashTrack</string>
    <string name="image_description">A blue logo inside a brown mover\'s box.</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="new_username_hint">Enter a username</string>
    <string name="new_password_hint">Enter a password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_prompt">Not yet registered? Sign up now!</string>
    <string name="item_name">Item name</string>
    <string name="item_quantity">Quantity</string>
    <string name="add_button">Add</string>
    <string name="view_all_button">View All</string>
    <string name="item_description">Units (boxes, tins, etc.)</string>
    <string name="register_activity_title">Register</string>
    <string name="user_phone_number">Phone number</string>
    <string name="user_email">Email</string>
    <string name="signup_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pass_instruction">Enter the email associated with your account</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_back_button">Back</string>
    <string name="sms_permission_required">SMS permission required for alerts</string>
    <string name="sms_permission_granted">SMS alerts enabled</string>
    <string name="item_row_description">Item Description</string>
    <string name="item_unit">Unit</string>
    <string name="del_vector_description">Deletes one item from the total number of items</string>
    <string name="edit_vector_description">Enables modification of a selected item</string>
    <string name="zero">0</string>
    <string name="additem_activity_title">Add Item</string>
    <string name="current_user">User: %s</string>
    <string name="item_unit_label">Units</string>
    <string name="decrease_label_description">Decreases item quantity by one</string>
    <string name="increase_label_description">Increases item quantity by one</string>
    <string name="add_item_button">Add Item</string>
    <string name="delete_all_button_text">Delete All</string>
    <string name="delete_alert_title">Delete All Items</string>
    <string name="delete_alert_message_text">Are you sure you want to delete all items from the database?</string>
    <string name="delete_alert_yes_button">Yes</string>
    <string name="delete_alert_no_button">No</string>
    <string name="edititem_popup_title">Edit Item</string>
    <string name="item_description_hint">Item description</string>
    <string name="item_qty_hint">Item quantity</string>
    <string name="item_unit_hint">Item unit</string>
    <string name="save_button">Save</string>
    <string name="total_items">Total</string>
    <string name="sms_button_label">SMS Alerts</string>
    <string name="scrollview_description">List of all items in the database</string>
    <string name="add_item_button_description">Add a new item to the database</string>
    <string name="sms_button_description">Enable SMS messaging for low inventory alerts</string>
    <string name="delete_all_button_description">Delete all items from the database</string>
    <string name="sms_alert_title">SMS permissions required</string>
    <string name="sms_alert_message_text">SMS alerts require notification permissions. You can enable or disable at any time.</string>
    <string name="sms_alert_button_enable">Enable</string>
    <string name="sms_alert_button_disable">Disable</string>
    <string name="signout_menu">Sign Out</string>
    <string name="two_step_authentication_title">Two Step Authentication</string>
    <string name="two_step_authentication_message">Thank you for completing two-step authentication with Firebase!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_email_hint">Enter your email address</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="multifactor_auth_text">Enable 2FA</string>
</resources>