<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="135dp"
        android:layout_height="136dp"
        android:layout_margin="64dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@+id/txtGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moving_company_logo" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/txtGreeting"
        android:layout_width="173dp"
        android:layout_height="57dp"
        android:layout_marginTop="232dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGreeting" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_prompt"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_multifactor_auth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/multifactor_auth_text"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.126" />

</androidx.constraintlayout.widget.ConstraintLayout>