<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".AuthFirstStep">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="71dp"
                android:text="@string/two_step_authentication_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="-20dp"
                android:background="@color/purple_700"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/personalInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_your_information"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_hint"
            android:background="@color/white"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/edit_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@color/white"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/register_activity_title"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>