<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".AddItem">

    <TextView
        android:id="@+id/textViewAddItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/additem_activity_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/current_user"
        android:gravity="center_horizontal"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddItemTitle" />

    <TextView
        android:id="@+id/textViewItemDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item_row_description"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentUser" />

    <EditText
        android:id="@+id/editTextItemDescription"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/item_row_description"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDescriptionLabel" />

    <TextView
        android:id="@+id/textViewItemUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item_unit_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemDescription" />

    <EditText
        android:id="@+id/editTextItemUnit"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/item_description"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemUnitLabel" />

    <TextView
        android:id="@+id/textViewItemQuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/item_quantity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemUnit" />

    <LinearLayout
        android:id="@+id/linearLayoutItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemQuantityLabel"
        tools:layout_editor_absoluteX="-50dp">

        <ImageButton
            android:id="@+id/itemQtyDecrease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/decrease_label_description"
            app:srcCompat="@drawable/decrease_quantity"
            app:tint="@color/black" />


        <EditText
            android:id="@+id/editTextItemQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/itemQtyIncrease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/increase_label_description"
            app:srcCompat="@drawable/increase_quantity"
            app:tint="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/addCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_corners"
        android:text="@string/cancel_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutItemQuantity" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_item_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutItemQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>
